<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Testing</string>
    <string name="application" translatable="false">Robolectric</string>
    <string name="menu_item_2" translatable="false">Second menu item</string>
    <string name="menu_item_1" translatable="false">First menu item</string>
    <string name="title_activity_login" translatable="false">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="error_incorrect_login" translatable="false">Password/Email is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing emailcompletions."</string>

    <plurals name="numberOfSongsAvailable">
        <item quantity="one">%d song found.</item>
        <item quantity="other">%d songs found.</item>
    </plurals>
</resources>